Remove fixed height to avoid big spacing gap at the bottom

--- a/styles/components/shared/CENNZnetAccountPicker.module.css
+++ b/styles/components/shared/CENNZnetAccountPicker.module.css
@@ -1,7 +1,6 @@
 .accountPickerContainer {
 	display: flex;
 	flex-direction: column;
-	height: 200px;
 	margin-bottom: 32px;
 }
 
